# token-airdrop-dapp

./: Anchor.toml
programs/token-airdrop-dapp/: Cargo.toml
programs/token-airdrop-dapp/src/: error.rs  lib.rs
tests/: token-airdrop-dapp.ts
tokenairdrop/: next.config.mjs  package-lock.json  package.json
tokenairdrop/anchor/: idl.json  types.ts
tokenairdrop/app/: layout.tsx  page.tsx
tokenairdrop/components/canvas/: AdminModal.tsx  AirdropStatistics.tsx  Card.tsx  Navbar.tsx
tokenairdrop/hooks/instructionHooks/: getAirdropData.tsx  useTokenAirdrop.tsx
tokenairdrop/providers/: Provider.tsx  anchor-provider.tsx  wallet-provider.tsx
