[package]
name = "token-airdrop-dapp"
version = "0.1.0"
description = "claim your token aidrop"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "token_airdrop_dapp"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = "0.30.1"
